--- a/comfoair.yaml
+++ b/comfoair.yaml
@@ -21,17 +21,33 @@ binary_sensor:
     filters:
       - invert:
       - delayed_on: 10ms
-    on_click:
-      - min_length: 50ms
-        max_length: 350ms
+    on_multi_click:
+      - timing:
+        - ON for at most 1s
+        - OFF for at most 1s
+        - ON for at most 1s
+        - OFF for at least 0.2s
+        then:
+          - climate.control: 
+              id: comfoair_climate
+              mode: FAN_ONLY
+              fan_mode: MEDIUM
+      - timing:
+        - ON for 1s to 2s
+        - OFF for at least 0.5s
+        then:
+          - climate.control: 
+              id: comfoair_climate
+              mode: FAN_ONLY
+              fan_mode: "OFF"
+      - timing:
+        - ON for at most 1s
+        - OFF for at least 0.5s
         then:
           - climate.control: 
               id: comfoair_climate
               mode: FAN_ONLY
               fan_mode: LOW
-      #- min_length: 5000ms
-      #  then:
-      #    - button.press: reset_button
 
 button:
   - platform: restart
@@ -124,8 +140,12 @@ climate:
     App.register_binary_sensor(ca->is_summer_mode);
 
     ca->return_air_level = new Sensor("Comfoair Return Air Level");
+    ca->return_air_level->set_unit_of_measurement("%");
+    ca->return_air_level->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->return_air_level);
     ca->supply_air_level = new Sensor("Comfoair Supply Air Level");
+    ca->supply_air_level->set_unit_of_measurement("%");
+    ca->supply_air_level->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->supply_air_level);
     
     ca->reset_filter_button = new esphome::comfoair::ResetFilterButton("Reset Filter", ca);
