--- a/comfoair.yaml
+++ b/comfoair.yaml
@@ -52,7 +52,7 @@ binary_sensor:
 button:
   - platform: restart
     id: reset_button
-    name: "Room Comfoair"
+    name: "Reset Comfoair"
 
 uart:
 - id: uart_bus
@@ -85,70 +85,110 @@ climate:
     auto ca = new esphome::comfoair::ComfoAirComponent(id(uart_bus), id(uart_proxy), id(green_led), id(blue_led), id(red_led));
     App.register_component(ca);
 
-    ca->outside_air_temperature = new Sensor("Comfoair Outside Air");
+    ca->outside_air_temperature = new Sensor();
+    ca->outside_air_temperature->set_name("Comfoair Outside Air");
+    ca->outside_air_temperature->set_object_id("Comfoair Outside Air");
     ca->outside_air_temperature->set_unit_of_measurement("°C");
     ca->outside_air_temperature->set_device_class("temperature");
     ca->outside_air_temperature->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->outside_air_temperature);
-    ca->supply_air_temperature = new Sensor("Comfoair Supply Air");
+    ca->supply_air_temperature = new Sensor();
+    ca->supply_air_temperature->set_name("Comfoair Supply Air");
+    ca->supply_air_temperature->set_object_id("Comfoair Supply Air");
     ca->supply_air_temperature->set_unit_of_measurement("°C");
     ca->supply_air_temperature->set_device_class("temperature");
     ca->supply_air_temperature->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->supply_air_temperature);
-    ca->return_air_temperature = new Sensor("Comfoair Return Air");
+    ca->return_air_temperature = new Sensor();
+    ca->return_air_temperature->set_name("Comfoair Return Air");
+    ca->return_air_temperature->set_object_id("Comfoair Return Air");
     ca->return_air_temperature->set_unit_of_measurement("°C");
     ca->return_air_temperature->set_device_class("temperature");
     ca->return_air_temperature->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->return_air_temperature);
-    ca->exhaust_air_temperature = new Sensor("Comfoair Exhaust Air");
+    ca->exhaust_air_temperature = new Sensor();
+    ca->exhaust_air_temperature->set_name("Comfoair Exhaust Air");
+    ca->exhaust_air_temperature->set_object_id("Comfoair Exhaust Air");
     ca->exhaust_air_temperature->set_unit_of_measurement("°C");
     ca->exhaust_air_temperature->set_device_class("temperature");
     ca->exhaust_air_temperature->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->exhaust_air_temperature);
+    ca->enthalpy_temperature = new Sensor();
+    ca->enthalpy_temperature->set_name("Comfoair Enthalpie Temperature");
+    ca->enthalpy_temperature->set_object_id("Comfoair Enthalpie Temperature");
+    ca->enthalpy_temperature->set_unit_of_measurement("°C");
+    ca->enthalpy_temperature->set_device_class("temperature");
+    ca->enthalpy_temperature->set_state_class(STATE_CLASS_MEASUREMENT);
+    App.register_sensor(ca->enthalpy_temperature);
+    ca->enthalpy_humidity = new Sensor();
+    ca->enthalpy_humidity->set_name("Comfoair Enthalpie Humidity");
+    ca->enthalpy_humidity->set_object_id("Comfoair Enthalpie Humidity");
+    ca->enthalpy_humidity->set_unit_of_measurement("%");
+    ca->enthalpy_humidity->set_state_class(STATE_CLASS_MEASUREMENT);
+    App.register_sensor(ca->enthalpy_humidity);
 
-    ca->fan_supply_air_percentage = new Sensor("Comfoair Fan Supply Air");
+    ca->fan_supply_air_percentage = new Sensor();
+    ca->fan_supply_air_percentage->set_name("Comfoair Fan Supply Air");
+    ca->fan_supply_air_percentage->set_object_id("Comfoair Fan Supply Air");
     ca->fan_supply_air_percentage->set_unit_of_measurement("%");
     ca->fan_supply_air_percentage->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->fan_supply_air_percentage);
-    ca->fan_exhaust_air_percentage = new Sensor("Comfoair Fan Exhaust Air");
+    ca->fan_exhaust_air_percentage = new Sensor();
+    ca->fan_exhaust_air_percentage->set_name("Comfoair Fan Exhaust Air");
+    ca->fan_exhaust_air_percentage->set_object_id("Comfoair Fan Exhaust Air");
     ca->fan_exhaust_air_percentage->set_unit_of_measurement("%");
     ca->fan_exhaust_air_percentage->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->fan_exhaust_air_percentage);
-    ca->fan_speed_supply = new Sensor("Comfoair Fan Speed Supply");
+    ca->fan_speed_supply = new Sensor();
+    ca->fan_speed_supply->set_name("Comfoair Fan Speed Supply");
+    ca->fan_speed_supply->set_object_id("Comfoair Fan Speed Supply");
     ca->fan_speed_supply->set_unit_of_measurement("rpm");
     ca->fan_speed_supply->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->fan_speed_supply);
-    ca->fan_speed_exhaust = new Sensor("Comfoair Fan Speed Exhaust");
+    ca->fan_speed_exhaust = new Sensor();
+    ca->fan_speed_exhaust->set_name("Comfoair Fan Speed Exhaust");
+    ca->fan_speed_exhaust->set_object_id("Comfoair Fan Speed Exhaust");
     ca->fan_speed_exhaust->set_unit_of_measurement("rpm");
     ca->fan_speed_exhaust->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->fan_speed_exhaust);
 
     ca->is_bypass_valve_open = new BinarySensor();
     ca->is_bypass_valve_open->set_name("Comfoair Bypass Valve");
+    ca->is_bypass_valve_open->set_object_id("Comfoair Bypass Valve");
     App.register_binary_sensor(ca->is_bypass_valve_open);
     ca->is_preheating = new BinarySensor();
     ca->is_preheating->set_name("Comfoair Preheating");
+    ca->is_preheating->set_object_id("Comfoair Preheating");
     App.register_binary_sensor(ca->is_preheating);
     ca->is_supply_fan_active = new BinarySensor();
     ca->is_supply_fan_active->set_name("Comfoair Supply Fan");
+    ca->is_supply_fan_active->set_object_id("Comfoair Supply Fan");
     App.register_binary_sensor(ca->is_supply_fan_active);
     ca->is_filter_full = new BinarySensor();
     ca->is_filter_full->set_name("Comfoair Filter Full");
+    ca->is_filter_full->set_object_id("Comfoair Filter Full");
     App.register_binary_sensor(ca->is_filter_full);
     ca->is_summer_mode = new BinarySensor();
     ca->is_summer_mode->set_name("Comfoair Summer Mode");
+    ca->is_summer_mode->set_object_id("Comfoair Summer Mode");
     App.register_binary_sensor(ca->is_summer_mode);
 
-    ca->return_air_level = new Sensor("Comfoair Return Air Level");
+    ca->return_air_level = new Sensor();
+    ca->return_air_level->set_name("Comfoair Return Air Level");
+    ca->return_air_level->set_object_id("Comfoair Return Air Level");
     ca->return_air_level->set_unit_of_measurement("%");
     ca->return_air_level->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->return_air_level);
-    ca->supply_air_level = new Sensor("Comfoair Supply Air Level");
+    ca->supply_air_level = new Sensor();
+    ca->supply_air_level->set_object_id("Comfoair Supply Air Level");
+    ca->supply_air_level->set_name("Comfoair Supply Air Level");
     ca->supply_air_level->set_unit_of_measurement("%");
     ca->supply_air_level->set_state_class(STATE_CLASS_MEASUREMENT);
     App.register_sensor(ca->supply_air_level);
     
     ca->reset_filter_button = new esphome::comfoair::ResetFilterButton("Reset Filter", ca);
+    ca->reset_filter_button->set_name("Reset Filter");
+    ca->reset_filter_button->set_object_id("Reset Filter");
     App.register_button(ca->reset_filter_button);
 
     App.register_climate(ca);
